dao n services update

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,3 +24,7 @@ manageable=Manageable
 yes=Yes
 no=No
 service.company.types=Service Company Types
+bank.accounts=Accounts
+bank.account.number=Account Number
+account.balance=Balance
+bank=Bank
