some views and scripts

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,3 +28,6 @@ bank.accounts=Accounts
 bank.account.number=Account Number
 account.balance=Balance
 bank=Bank
+register.building=Register a Building
+register.apartment=Register an Apartment
+owner=Owner
