more views and controllers

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,3 +31,16 @@ bank=Bank
 register.building=Register a Building
 register.apartment=Register an Apartment
 owner=Owner
+room.number=Apartment Number
+room.size=Apartment Size
+tenant=Tenant
+serial.number=Serial Number
+wifi.name=WiFi name
+wifi.password=WiFi Password
+location.address=Location
+register.service.contract=Service Contract Registration
+service.company.name=Service Company
+login=Login
+password=Password
+start.date=Start Date
+end.date=End Date
