dao n services update

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 new.owner=New Owner
-all.owners=All Owners
+owners=Owners
 person.name=Name
 address=Address
 person.CAF=CAF
@@ -14,7 +14,7 @@ add.exta=Add Extra
 email=Email
 NotEmpty=Please fill out this field
 person.id=ID
-all.buildings=All Buildings
+buildings=Buildings
 acquisition.date=Acquisition Date
 construction.date=Construction Date
 date.of.sale=Date of Sale
