renting contract huge update

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,3 +44,13 @@ login=Login
 password=Password
 start.date=Start Date
 end.date=End Date
+rent.price=Rent
+deposit=Deposit
+deposit.returned=Deposit Returned
+expected.end.date=Expected End Date
+actual.end.date=Actual End Date
+estimated.fees=Estimated Fees
+end.contract=End Contract
+return.deposit=Return Deposit
+new.tenant=New Tenant
+renting.contract=Renting Contract
