--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -54,3 +54,18 @@ end.contract=End Contract
 return.deposit=Return Deposit
 new.tenant=New Tenant
 renting.contract=Renting Contract
+tenants=Tenants
+service.companies=Service Companies
+banks=Banks
+new.service.company=Register Service Company
+service.company.type=Service Company Type
+register.bank=Register a Bank
+new.equipment=New Equipment
+register.service.company=Register a Service Company
+register.owner.account=Register an Account
+apartments=Apartments
+register.credit.payment=Register a Credit Payment
+date=Date
+amount=Amount
+description=Description
+new.renting.contract=New Renting Contract
