credit payments and reports done

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -69,3 +69,5 @@ date=Date
 amount=Amount
 description=Description
 new.renting.contract=New Renting Contract
+contract.report=Contract Report
+view.report=View Report
