--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,7 +18,7 @@ buildings=Buildings
 acquisition.date=Acquisition Date
 construction.date=Construction Date
 date.of.sale=Date of Sale
-vacant.apartments=Vacant Apartments
+available=Available
 comment=Comment
 manageable=Manageable
 yes=Yes
@@ -38,7 +38,7 @@ serial.number=Serial Number
 wifi.name=WiFi name
 wifi.password=WiFi Password
 location.address=Location
-register.service.contract=Service Contract Registration
+register.service.contract=Register a Service Contract
 service.company.name=Service Company
 login=Login
 password=Password
@@ -71,3 +71,14 @@ description=Description
 new.renting.contract=New Renting Contract
 contract.report=Contract Report
 view.report=View Report
+create.debit.payment=Create Debit Payment
+create.credit.payment=Create Credit Payment
+service.payment=Service Payment
+building.payment=Building Payment
+apartment.payment=Apartment Payment
+reimbursement=Reimbursement
+building=Building
+apartment=Apartment
+select.date=Select date
+service.contracts=Service Contracts
+edit=Edit
