filtering by date; all-payments page in settings

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -82,3 +82,7 @@ apartment=Apartment
 select.date=Select date
 service.contracts=Service Contracts
 edit=Edit
+since=Since
+till=Till
+clear=Clear
+all.payments=All Payments
