ready for presentation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,8 +40,6 @@ wifi.password=WiFi Password
 location.address=Location
 register.service.contract=Register a Service Contract
 service.company.name=Service Company
-login=Login
-password=Password
 start.date=Start Date
 end.date=End Date
 rent.price=Rent
@@ -86,3 +84,16 @@ since=Since
 till=Till
 clear=Clear
 all.payments=All Payments
+login=Login
+logout=Logout
+login.error=Invalid username or password
+logged.out=You have been logged out
+change.username=Change Username
+change.password=Change Password
+username=Username
+password=Password
+new.password=New Password
+new.username=New Username
+confirmation=Confirmation
+fields.dont.match=Inputs do not match
+successfully.changed=Successfully Changed
