aop done(had to split), localization implemented

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -48,7 +48,8 @@ deposit.returned=Deposit Returned
 expected.end.date=Expected End Date
 actual.end.date=Actual End Date
 estimated.fees=Estimated Fees
-end.contract=End Contract
+end.renting.contract=End Contract
+end.service.contract=End Contract
 return.deposit=Return Deposit
 new.tenant=New Tenant
 renting.contract=Renting Contract
@@ -84,8 +85,8 @@ since=Since
 till=Till
 clear=Clear
 all.payments=All Payments
-login=Login
-logout=Logout
+login=Log in
+logout=Log out
 login.error=Invalid username or password
 logged.out=You have been logged out
 change.username=Change Username
