--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,3 +1,100 @@
 new.owner=New Owner
-all.owners=All Owners
+owners=Owners
 person.name=Name
+address=Address
+person.CAF=CAF
+person.title=Title
+person.titles=Person Titles
+application.settings=Settings
+delete=Delete
+save=Save
+add.new=Add New
+phone=Phone
+add.exta=Add Extra
+email=Email
+NotEmpty=Please fill out this field
+person.id=ID
+buildings=Buildings
+acquisition.date=Acquisition Date
+construction.date=Construction Date
+date.of.sale=Date of Sale
+available=Available
+comment=Comment
+manageable=Manageable
+yes=Yes
+no=No
+service.company.types=Service Company Types
+bank.accounts=Accounts
+bank.account.number=Account Number
+account.balance=Balance
+bank=Bank
+register.building=Register a Building
+register.apartment=Register an Apartment
+owner=Owner
+room.number=Apartment Number
+room.size=Apartment Size
+tenant=Tenant
+serial.number=Serial Number
+wifi.name=WiFi name
+wifi.password=WiFi Password
+location.address=Location
+register.service.contract=Register a Service Contract
+service.company.name=Service Company
+start.date=Start Date
+end.date=End Date
+rent.price=Rent
+deposit=Deposit
+deposit.returned=Deposit Returned
+expected.end.date=Expected End Date
+actual.end.date=Actual End Date
+estimated.fees=Estimated Fees
+end.renting.contract=End Contract
+end.service.contract=End Contract
+return.deposit=Return Deposit
+new.tenant=New Tenant
+renting.contract=Renting Contract
+tenants=Tenants
+service.companies=Service Companies
+banks=Banks
+new.service.company=Register Service Company
+service.company.type=Service Company Type
+register.bank=Register a Bank
+new.equipment=New Equipment
+register.service.company=Register a Service Company
+register.owner.account=Register an Account
+apartments=Apartments
+register.credit.payment=Register a Credit Payment
+date=Date
+amount=Amount
+description=Description
+new.renting.contract=New Renting Contract
+contract.report=Contract Report
+view.report=View Report
+create.debit.payment=Create Debit Payment
+create.credit.payment=Create Credit Payment
+service.payment=Service Payment
+building.payment=Building Payment
+apartment.payment=Apartment Payment
+reimbursement=Reimbursement
+building=Building
+apartment=Apartment
+select.date=Select date
+service.contracts=Service Contracts
+edit=Edit
+since=Since
+till=Till
+clear=Clear
+all.payments=All Payments
+login=Log in
+logout=Log out
+login.error=Invalid username or password
+logged.out=You have been logged out
+change.username=Change Username
+change.password=Change Password
+username=Username
+password=Password
+new.password=New Password
+new.username=New Username
+confirmation=Confirmation
+fields.dont.match=Inputs do not match
+successfully.changed=Successfully Changed
